--- a/src/JDBC.properties
+++ b/src/JDBC.properties
@@ -1,9 +1,8 @@
 #java中的properties文件是一种配置文件，主要用于表达配置信息。
 #文件类型为*.properties，格式为文本文件，文件内容是 键=值 的格式，字符串不需要加""。
 #在properties文件中，可以用"#"来作注释
-
 #MySQL连接配置
 mysqlDriver=com.mysql.jdbc.Driver
-mysqlUrl=jdbc:mysql://localhost:3306/test_03?useSSL=false&characterEncoding=utf8
+mysqlUrl=jdbc:mysql://localhost:3306/studentmanager?useSSL=false&characterEncoding=utf8
 mysqlUser=root
 mysqlPwd=dzh20001220
